# aim_evaluation

./: .gitignore  AIM_Evaluation 서현.ipynb  AIM_Evaluation 유비.ipynb  AIM_Evaluation 재석.ipynb  AIM_Evaluation_v1.ipynb  AIM_Evaluation_v2 서현.ipynb  AIM_Evaluation_v2 재민.ipynb  AIM_Evaluation_v2 재석.ipynb  README.md  evaluation.py  main.py  pyproject.toml  test_upload.py
scripts/: run_sample_eval.py
static/: style.css
templates/: index.html  index_fixed.html  results.html  test.html
tests/: test_normalization.py
