[project]
name = "aim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "lpips>=0.1.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "scikit-learn",
    "accelerate",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "ipywidgets>=8.1.7",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
